--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,11 @@
     "require": {
         "silex/silex": "1.*",
         "twig/twig": ">=1.8,<2.0",
-        "emanueleminotto/faker-service-provider": "dev-master",
         "willdurand/negotiation": "@stable",
-        "symfony/serializer": ">=2.3,<2.4-dev"
+        "symfony/serializer": ">=2.3,<2.4-dev",
+        "fzaninotto/faker": "~1.0"
     },
     "autoload": {
-        "psr-0": { "RandomStuff": "src" }
+        "psr-0": { "": "src" }
     }
 }
