--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
         "symfony/serializer": ">=2.3,<2.4-dev",
         "fzaninotto/faker": "~1.0"
     },
+    "require-dev": {
+        "silex/web-profiler": "~1.0"
+    },
     "autoload": {
         "psr-0": { "": "src" }
     }
