--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
         "twig/twig": ">=1.8,<2.0",
         "willdurand/negotiation": "@stable",
         "symfony/serializer": ">=2.3,<2.4-dev",
-        "fzaninotto/faker": "~1.0"
+        "kphoen/faker-service-provider": "~1.0"
     },
     "require-dev": {
         "silex/web-profiler": "~1.0"
