--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,16 @@
 {
+    "name": "kphoen/random-stuff-generator",
+    "description": "API providing randomly generated entities (users, locations, events, ...)",
+    "type": "project",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Kévin Gomez",
+            "email": "contact@kevingomez.fr",
+            "homepage": "http://www.kevingomez.fr/"
+        }
+    ],
+
     "require": {
         "silex/silex": "1.*",
         "twig/twig": ">=1.8,<2.0",
@@ -9,6 +21,7 @@
     "require-dev": {
         "silex/web-profiler": "~1.0"
     },
+
     "autoload": {
         "psr-0": { "": "src" }
     }
